--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -2,4 +2,7 @@
 @import "container";
 @import "header";
 @import "hero";
+@import "why";
+@import "standart";
+@import "project";
 @import "footer";
