--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,3 +1,20 @@
 html {
     scroll-behavior: smooth;
 }
+
+h1, h2, h3, h4, h5, h6, p, li, ul, body, html {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    vertical-align: middle;
+}
