--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,56 @@ template {
   display: none;
 }
 
+/* montserrat-regular - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url("../fonts/montserrat-v24-latin_cyrillic-regular.woff2") format("woff2"), url("../fonts/montserrat-v24-latin_cyrillic-regular.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* montserrat-500 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 500;
+  src: url("../fonts/montserrat-v24-latin_cyrillic-500.woff2") format("woff2"), url("../fonts/montserrat-v24-latin_cyrillic-500.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* montserrat-600 - latin_cyrillic */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 600;
+  src: url("../fonts/montserrat-v24-latin_cyrillic-600.woff2") format("woff2"), url("../fonts/montserrat-v24-latin_cyrillic-600.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* tenor-sans-regular - latin_cyrillic */
+@font-face {
+  font-family: 'Tenor Sans';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url("../fonts/tenor-sans-v17-latin_cyrillic-regular.woff2") format("woff2"), url("../fonts/tenor-sans-v17-latin_cyrillic-regular.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* dm-sans-500 - latin */
+@font-face {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 500;
+  src: url("../fonts/dm-sans-v11-latin-500.woff2") format("woff2"), url("../fonts/dm-sans-v11-latin-500.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -374,6 +424,8 @@ img {
   position: fixed;
   width: 100%;
   background-color: transparent;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.25)), to(rgba(0, 0, 0, 0.25)));
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25));
   z-index: 999;
 }
 
@@ -388,7 +440,7 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-bottom: 22px;
-  padding-top: 22px;
+  padding-top: 35px;
 }
 
 .header .header__container .header__list {
@@ -787,6 +839,9 @@ img {
           align-items: center;
   gap: 32px;
   margin-bottom: 100px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .project__container .project__list .project__item {
@@ -879,5 +934,312 @@ img {
   font-size: 27px;
   line-height: 32px;
   color: #F8F6F4;
+}
+
+.group__container .group__heading {
+  position: relative;
+  padding-top: 157px;
+  font-family: 'Tenor Sans';
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 75px;
+  color: #000000;
+  text-align: center;
+  margin-bottom: 100px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.group__container .group__heading::before {
+  position: absolute;
+  content: "";
+  display: inline-block;
+  max-width: 89px;
+  width: 100%;
+  height: 47px;
+  background-image: url("./../img/flower.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateY(-20%) translateX(-60%);
+          transform: translateY(-20%) translateX(-60%);
+}
+
+.group__container .group__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 31px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.group__container .group__list .group__item {
+  padding-top: 310px;
+  padding-bottom: 24px;
+  max-width: 231px;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(48.12%, rgba(0, 0, 0, 0)), to(#000000)), url("./../../img/group-1.png");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url("./../../img/group-1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.group__container .group__list .group__item:nth-child(2) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(48.12%, rgba(0, 0, 0, 0)), to(#000000)), url("./../../img/group-2.jpg");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url("./../../img/group-2.jpg");
+}
+
+.group__container .group__list .group__item:nth-child(3) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(48.12%, rgba(0, 0, 0, 0)), to(#000000)), url("./../../img/group3.jpg");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url("./../../img/group3.jpg");
+}
+
+.group__container .group__list .group__item:nth-child(4) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(48.12%, rgba(0, 0, 0, 0)), to(#000000)), url("./../../img/group-4.jpg");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url("./../../img/group-4.jpg");
+}
+
+.group__container .group__list .group__item:nth-child(5) {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(48.12%, rgba(0, 0, 0, 0)), to(#000000)), url("./../../img/group-5.jpg");
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url("./../../img/group-5.jpg");
+}
+
+.group__container .group__list .group__item .group__item-text {
+  font-family: 'DM Sans';
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 100%;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.contact__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 117px;
+}
+
+.contact__heading {
+  position: relative;
+  padding-top: 157px;
+  font-family: 'Tenor Sans';
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 75px;
+  color: #000000;
+  text-align: center;
+  margin-bottom: 78px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.contact__heading::before {
+  position: absolute;
+  content: "";
+  display: inline-block;
+  max-width: 89px;
+  width: 100%;
+  height: 47px;
+  background-image: url("./../img/flower.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateY(-20%) translateX(-60%);
+          transform: translateY(-20%) translateX(-60%);
+}
+
+.contact__main-text {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 66px;
+  text-align: center;
+  color: #000000;
+  max-width: 1044px;
+  width: 100%;
+  margin-bottom: 134px;
+}
+
+.contact__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contact__list {
+  margin-right: 203px;
+}
+
+.contact__item {
+  max-width: 454px;
+  width: 100%;
+  margin-bottom: 80px;
+}
+
+.contact__item:last-child {
+  margin-bottom: 0;
+}
+
+.contact__item-heading {
+  font-family: 'Montserrat';
+  font-weight: 600;
+  font-size: 26.2044px;
+  line-height: 32px;
+  color: #15594D;
+  opacity: 0.5;
+  margin-bottom: 10px;
+}
+
+.contact__text {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 39px;
+  color: #000000;
+}
+
+.footer {
+  background: #FBFBF9;
+  padding-top: 60px;
+}
+
+.footer__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 36px;
+}
+
+.footer__first {
+  max-width: 148px;
+  width: 100%;
+  margin-right: 80px;
+}
+
+.footer__logo-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 16px;
+}
+
+.footer__icon-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 18px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer__main-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 70px;
+}
+
+.footer__main-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer__main-item-heading {
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 27px;
+  color: #000000;
+  margin-bottom: 24px;
+}
+
+.footer__main-item-link {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 20px;
+}
+
+.footer__main-item-link:last-child {
+  margin-bottom: 0;
+}
+
+.footer__main-item-tel {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 20px;
+}
+
+.footer__main-item-mail {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 20px;
+}
+
+.footer__main-item-location {
+  font-family: 'Montserrat';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.5);
+  max-width: 295px;
+  width: 100%;
+}
+
+.footer__bottom-text {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: rgba(0, 0, 0, 0.8);
+  padding-bottom: 24px;
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
