--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -2,13 +2,14 @@
     position: fixed;
     width: 100%;
     background-color: transparent;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25));
     z-index: 999;
     .header__container {
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding-bottom: 22px;
-        padding-top: 22px;
+        padding-top: 35px;
         .header__list {
             display: flex;
             align-items: center;
