--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -31,6 +31,7 @@
         align-items: center;
         gap: 32px;
         margin-bottom: 100px;
+        justify-content: space-between;
         .project__item {
             display: flex;
             flex-direction: column;
