--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,10 +1,16 @@
 @import "visually-hidden";
 @import "container";
 @import "header";
+@import "header-plus";
 @import "hero";
 @import "why";
 @import "standart";
 @import "project";
 @import "group";
 @import "contact";
+@import "hero-project";
+@import "project-s";
+@import "hero-b";
+@import "boulevard-img";
+@import "about";
 @import "footer";
