--- a/scss/blocks/_group.scss
+++ b/scss/blocks/_group.scss
@@ -38,23 +38,23 @@
             width: 100%;
             height: 100%;
             border-radius: 8px;
-            background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../../img/group-1.png') ;
+            background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../img/group-1.png') ;
             background-repeat: no-repeat;
             background-size: cover;
             &:nth-child(2) {
-                background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../../img/group-2.jpg');
+                background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../img/group-2.jpg');
             }
             
             &:nth-child(3) {
-                background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../../img/group3.jpg');
+                background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../img/group3.jpg');
             }
             
             &:nth-child(4) {
-                background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../../img/group-4.jpg');
+                background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../img/group-4.jpg');
             }
             
             &:nth-child(5) {
-                background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../../img/group-5.jpg');
+                background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 48.12%, #000000 100%), url('./../img/group-5.jpg');
             }
             .group__item-text {
                 font-family: 'DM Sans';
@@ -64,6 +64,25 @@
                 text-align: center;
                 color: #FFFFFF;
             }
+        }
+    }
+}
+
+@media only screen and  (max-width: 375px) {
+    .group__container {
+        .group__heading {
+            padding-top: 66px;
+            font-size: 24px;
+            line-height: 28px;
+            margin-bottom: 24px;
+            &::before {
+                width: 40px;
+                height: 20px;
+            }
+        }
+        .group__list {
+            display: flex;
+            flex-direction: column;
         }
     }
 }
