--- a/scss/blocks/_project.scss
+++ b/scss/blocks/_project.scss
@@ -84,7 +84,7 @@
                         width: 30px;
                         height: 30px;
                         border-radius: 50%;
-                        background-image: url('./../../img/Vector.svg');
+                        background-image: url('./../img/Vector.svg');
                         background-repeat: no-repeat;
                         background-position: center;
                         background-size: 8px;
@@ -100,6 +100,26 @@
                     color: #F8F6F4;
                 }
             }
+        }
+    }
+}
+
+
+@media only screen and  (max-width: 375px) {
+    .project__container {
+        .project__heading {
+            padding-top: 66px;
+            font-size: 24px;
+            line-height: 28px;
+            margin-bottom: 24px;
+            &::before {
+                width: 40px;
+                height: 20px;
+            }
+        }
+        .project__list {
+            display: flex;
+            flex-direction: column;
         }
     }
 }
