--- a/scss/blocks/_standart.scss
+++ b/scss/blocks/_standart.scss
@@ -65,3 +65,58 @@
         }
     }
 }
+
+
+@media only screen and  (max-width: 375px) {
+    .standart__container {
+        display: flex;
+        flex-direction: column;
+        .standart__wrapper {
+            margin: 0;
+            .standart__heading {
+                font-size: 24px;
+                line-height: 34px;
+                text-align: center;
+            }
+            .standart__top-list {
+                gap: 0px;
+                display: flex;
+                justify-content: space-evenly;
+                margin-bottom: 10px;
+                .standart__t-item {
+                    
+                    .standart__t-item-heading {
+                        font-size: 36px;
+                        line-height: 200%;
+                    }
+                    .standart__t-item-text {
+                        font-size: 9.26508px;
+                        line-height: 12px;
+                    }
+                }
+            }
+            .standart__bottom-list {
+                gap: 0px;
+                display: flex;
+                justify-content: space-evenly;
+                .standart__b-item {
+                    
+                    .standart__b-item-heading {
+                        font-size: 36px;
+                        line-height: 200%;
+                    }
+                    .standart__b-item-text {
+                        font-size: 9.26508px;
+                        line-height: 12px;
+                    }
+                }
+            }
+        }
+    }
+    
+    .standart__img {
+        width: 334px;
+        height: 242px;
+        margin-bottom: 19px;
+    }
+}
