--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -85,7 +85,7 @@
     }
 }
 
-@media only screen and  (max-width: 375px) {
+@media only screen and  (max-width: 420px) {
     .contact {
         
         &__container {
@@ -105,6 +105,7 @@
         &__main-text {
             font-size: 14px;
             line-height: 24px;
+            margin-bottom: 40px;
         }
         
         &__wrapper {
