--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -117,6 +117,7 @@
             display: flex;
             flex-wrap: wrap;
             margin: 0;
+            margin-bottom: 30px;
             justify-content: space-between;
         }
         
